crates/core/talkbank-parser/tests/snapshots/utterance_parsing_tests__error_e305_missing_terminator_treesitter.snap
---
source: talkbank-tree-sitter-parser/tests/utterance_parsing_tests.rs
assertion_line: 136
expression: result
---
Ok(
    MainTier {
        speaker: SpeakerCode(
            "CHI",
        ),
        linkers: [],
        language_code: None,
        content: [
            Word(
                Word {
                    span: Span {
                        start: 107,
                        end: 112,
                    },
                    word_id: None,
                    raw_text: "hello",
                    cleaned_text: "hello",
                    content: [
                        Text {
                            text: "hello",
                        },
                    ],
                    category: None,
                    form_type: None,
                    untranscribed: None,
                    lang: None,
                    part_of_speech: None,
                },
            ),
        ],
        terminator: None,
        postcodes: [],
        bullet: None,
        span: Span {
            start: 101,
            end: 113,
        },
        speaker_span: Span {
            start: 102,
            end: 105,
        },
    },
)
