crates/core/talkbank-parser/tests/snapshots/utterance_parsing_tests__error_missing_tab_treesitter.snap
---
source: talkbank-tree-sitter-parser/tests/utterance_parsing_tests.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: MissingMainTier,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                },
                context: ErrorContext {
                    source_text: "",
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    expected: [],
                    found: "",
                },
                message: "Could not find main_tier node in parse tree",
                suggestion: None,
                help_url: Some(
                    "https://talkbank.org/errors/E301",
                ),
            },
        ],
    },
)
